@@ -36,7 +36,7 @@ _systemd_analyze() {
 
         local -A OPTS=(
                [STANDALONE]='--help --version --system --user --from-pattern --to-pattern --order --require --no-pager'
-                      [ARG]='-H --host -M --machine'
+                      [ARG]='-M --machine'
         )
 
         local -A VERBS=(
@@ -58,9 +58,6 @@ _systemd_analyze() {
 
         if __contains_word "$prev" ${OPTS[ARG]}; then
                 case $prev in
-                        --host|-H)
-                                comps=$(compgen -A hostname)
-                        ;;
                         --machine|-M)
                                 comps=$( __get_machines )
                         ;;
